--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,39 +9,37 @@ services:
         ports:
             - 80:80     # the HTTP port
             - 443:443   # https Port
-            - 8081:8081 # the Web UI (enabled by --api)
+            - 8080:8080 # the Web UI (enabled by --api)
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - ./proxy/traefik.toml:/etc/traefik/traefik.toml
+            - ./proxy/acme.json:/acme.json
+            - ./proxy:/opt/traefik/
 
     turing-api:
         build: turing-api/
         image: turing-api
         container_name: turing-api
         volumes:
-            - ./turing-api:/usr/src/app/
+            - ./turing-api:/backend
         environment:
-            - NPM_CONFIG_LOGLEVEL=warn
-            - NODE_ENV=development
-            - ENV=local
-            - DEBUG=true
-            - DATABASE_URL=mysql://turing:turing@db:3306/turing
-            - TEST_DATABASE_URL=mysql://turing:turing@db-test:3306/turing_test
-            - EMAIL_HOST_USER=yosam.db@gmail.com
-            - EMAIL_HOST_PASSWORD=ronald@507
+            - DATABASE_URL=mysql://turing:turing@localhost/turing
+            - STRIPE_PUBLISHABLE_KEY=somekey
+            - STRIPE_SECRET_KEY=sk_test_lomdOfxbm7QDgZWvR82UhV6D
+            - SENDGRID_API_KEY=somekey
+            - JWT_KEY=23456780poiuytrewq
         links:
-            - proxy:local.turing.com
-            - db
             - db-test
+            - proxy:local.turing.com
         labels:
             - traefik.enable=true
-            - traefik.port=3000
+            - traefik.port=5000
             - traefik.api.backend=turing-api
             - traefik.api.frontend.passHostHeader=true
-            - traefik.api.frontend.rule=Host:local.turing.com;PathPrefixStrip:/api
+            - traefik.api.frontend.rule=Host:local.turing.com;PathPrefix:/api
         depends_on:
-            - db
-        command: bash -c "npm install && bash ./docker/run.sh"
+            - db-test
+        command: bash -c "npm install && bash ./turing-entrypoint.sh"
 
     turing-shop:
         build: turing-shop/
@@ -50,7 +48,6 @@ services:
         volumes:
             - ./turing-shop:/usr/src/app/
         links:
-            - proxy:local.turing.com
             - turing-api
         environment:
             - ENV=local
@@ -64,29 +61,7 @@ services:
             - traefik.dashboard.frontend.rule=Host:local.turing.com;Path:/
             - traefik.dashboard.frontend.redirect.regex=^http://local.turing.com/(.*)
             - traefik.dashboard.frontend.redirect.replacement=http://local.turing.com/dashboard/$$1
-        depends_on:
-            - db
         command: bash -c "npm install && bash ./docker/run.sh"
-
-    db:
-        image: mysql:5.7
-        container_name: db
-        command: ["--general_log=1", "--log_output=TABLE", "--explicit_defaults_for_timestamp=1"]
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_PASSWORD=turing
-            - MYSQL_DATABASE=turing
-            - MYSQL_USER=turing
-        ports:
-            - 3306:3306
-        restart: always
-        volumes:
-            - ./tmp-docker-vol/mysql:/var/lib/mysql
-        healthcheck:
-            test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-proot"]
-            interval: 30s
-            timeout: 30s
-            retries: 10
 
     db-test:
         image: mysql:5.7
@@ -95,10 +70,10 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=root
             - MYSQL_PASSWORD=turing
-            - MYSQL_DATABASE=turing
+            - MYSQL_DATABASE=turing_test
             - MYSQL_USER=turing
         ports:
-            - 3307:3306
+            - 3306:3306
         restart: always
         healthcheck:
             test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-proot"]
